--- a/module_freshman/src/main/res/values/strings.xml
+++ b/module_freshman/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="freshman_data_study">学科数据</string>
     <string name="freshman_data_percent">男女比例</string>
 
+    <string name="freshman_fragment_bus_line_copied">重邮地址已复制到粘贴板</string>
     >>>>>>> upstream/dev
 </resources>
