校园指引基本完成

--- a/module_freshman/src/main/res/values/strings.xml
+++ b/module_freshman/src/main/res/values/strings.xml
@@ -6,8 +6,14 @@
     <string name="freshman_guide_dining_room">食堂</string>
     <string name="freshman_guide_delivery">快递</string>
     <string name="freshman_guide_data">数据揭秘</string>
-    <string name="freshman_data_study">学科数据</string>
+    <string name="freshman_data_study">最难科目</string>
     <string name="freshman_data_percent">男女比例</string>
+    <string name="freshman__2019">重邮2019迎新专题</string>
+    <string name="freshman_future">邮你造未来</string>
+    <string name="freshman_newfunc">掌上重邮新功能</string>
+    <string name="freshman_more">校车, 校历等更多查询功能</string>
+    <string name="freshman_assistant">重邮小帮手</string>
+    <string name="freshman_help">学长学姐帮帮忙</string>
 
     >>>>>>> upstream/dev
 </resources>
