--- a/module_freshman/src/main/res/values/strings.xml
+++ b/module_freshman/src/main/res/values/strings.xml
@@ -17,11 +17,14 @@
 
     <string name="freshman_fragment_bus_line_copied">重邮地址已复制到粘贴板</string>
     <string name="freshman_copy">保存图片到手机</string>
-    <string name="freshman_cancel">取消</string>
     <string name="freshman_cource">学院群</string>
     <string name="freshman_fellow">老乡群</string>
     <string name="freshman_activity">线上活动</string>
     <string name="freshman_takePart">立即参与</string>
     <string name="freshman_edit">找不到学院群？试试搜索</string>
+    <string name="freshman_copy1">复制</string>
+    <string name="freshman_cancel">取消</string>
+    <string name="freshman_nomore">没有更多了</string>
+    <string name="freshman_fellow1">找不到老乡群？试试搜索</string>
     >>>>>>> upstream/dev
 </resources>
